Refactor referral and course path algorithms
Simplified and optimized EmployeeReferralProgram by removing redundant methods, improving memoization, and streamlining data structures. Refactored FindMiddleCourse II to clarify path construction, improve memoization, and clean up course dependency logic for better readability and efficiency.