@@ -1,72 +1,73 @@
-
 import java.util.*;
 
 class Solution {
     public String findLongestPathMiddleCourse(List<List<String>> pairs) {
 
+        Set<String> set = new HashSet<>();
         Map<String, List<String>> map = new HashMap<>();
-        Set<String> courses = new HashSet<>();
+
+        for (List<String> pair : pairs) {
+            String course = pair.get(0);
+            String depend = pair.get(1);
+            set.add(course);
+            set.add(depend);
+        }
 
         for (List<String> pair : pairs) {
 
-            String key = pair.get(0);
-            String value = pair.get(1);
-            
-            if(!map.containsKey(key)){
-                map.put(key, new ArrayList<>(Arrays.asList(value)));
-            }else{
-                map.get(key).add(value);
+            String course = pair.get(0);
+            String depend = pair.get(1);
+
+            if (map.containsKey(course)) {
+                map.get(course).add(depend);
+            } else {
+                map.put(course, new ArrayList<>(List.of(depend)));
             }
-
-            courses.add(pair.get(0));
-            courses.add(pair.get(1));
+            set.remove(depend);
         }
-
-        map.values().forEach(list -> list.forEach( val -> courses.remove(val)) );
-
 
         List<String> longestPath = new ArrayList<>();
         Map<String, List<String>> memo = new HashMap<>();
-        for(String sourceNode : courses){ 
-            List<String> path  = dfs(sourceNode, map, new ArrayList<>(), memo);
+        for (String sourceNode : set) {
+            List<String> longestChain = dfs(sourceNode, map, memo);
 
-            if(path.size() > longestPath.size()){
-                longestPath = path;
+            if (longestChain.size() > longestPath.size()) {
+                longestPath = longestChain;
             }
         }
-        
-        if(longestPath.size() % 2 == 0){
-            int mid = (longestPath.size()/2)-1;
+
+        if (longestPath.size() % 2 == 0) {
+            int mid = (longestPath.size() / 2) - 1;
             return longestPath.get(mid);
-        }else{
-            int mid = longestPath.size()/2;
+        } else {
+            int mid = longestPath.size() / 2;
             return longestPath.get(mid);
         }
 
     }
 
-    public List<String> dfs(String node, Map<String, List<String>> map, List<String> chain, Map<String, List<String>> memo){
-        
-        if(memo.containsKey(node)) return memo.get(node);
+    public List<String> dfs(String curr, Map<String, List<String>> map, Map<String, List<String>> memo) {
 
-        chain.add(node);
+        if (memo.containsKey(curr)) return memo.get(curr);
 
-        if(!map.containsKey(node)) return chain;
-    
-        List<String> longest = new ArrayList<>();
+        List<String> longestPath = new ArrayList<>();
 
-        for(String neigh : map.get(node)){
-            
-            List<String> newPath = dfs(neigh, map, new ArrayList<>(chain), memo);
+        if (map.containsKey(curr)) {
 
-            if(newPath.size() > longest.size()){
-                longest = newPath;
+            for (String neigh : map.get(curr)) {
+                List<String> newPath = dfs(neigh, map, memo);
+
+                if (newPath.size() > longestPath.size()) {
+                    longestPath = newPath;
+                }
             }
         }
 
-        longest.add(0, node); // add current node at the beginning of the longest path
+        List<String> result = new ArrayList<>();
+        result.add(curr);
+        result.addAll(longestPath);
 
-        memo.put(node, longest);
-        return longest;
+        memo.put(curr, result);
+        return result;
     }
 }
